proxy andando. notas preentrega